[gd_scene load_steps=3 format=3 uid="uid://cdtyd7wvimttf"]

[ext_resource type="Theme" uid="uid://baoqr7j73ipkc" path="res://resources/custom.tres" id="1_e2mec"]
[ext_resource type="Script" path="res://scripts/options.gd" id="1_k36oe"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k36oe")

[node name="OuterMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Panel" type="Panel" parent="OuterMargin"]
layout_mode = 2
theme = ExtResource("1_e2mec")

[node name="HeadingMargin" type="MarginContainer" parent="OuterMargin/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HeadingLabel" type="Label" parent="OuterMargin/Panel/HeadingMargin"]
layout_mode = 2
theme = ExtResource("1_e2mec")
theme_override_font_sizes/font_size = 64
text = "OPTIONS"

[node name="ControlsMargin" type="MarginContainer" parent="OuterMargin/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="ControlsVBox" type="VBoxContainer" parent="OuterMargin/Panel/ControlsMargin"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="VolumeHBox" type="HBoxContainer" parent="OuterMargin/Panel/ControlsMargin/ControlsVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="MusicHBox" type="VBoxContainer" parent="OuterMargin/Panel/ControlsMargin/ControlsVBox/VolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MusicLabel" type="Label" parent="OuterMargin/Panel/ControlsMargin/ControlsVBox/VolumeHBox/MusicHBox"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_e2mec")
text = "MUSIC - 100%"

[node name="MusicSlider" type="HSlider" parent="OuterMargin/Panel/ControlsMargin/ControlsVBox/VolumeHBox/MusicHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_e2mec")
value = 100.0

[node name="SFXHBox" type="VBoxContainer" parent="OuterMargin/Panel/ControlsMargin/ControlsVBox/VolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SFXLabel" type="Label" parent="OuterMargin/Panel/ControlsMargin/ControlsVBox/VolumeHBox/SFXHBox"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_e2mec")
text = "SFX - 100%"

[node name="SFXSlider" type="HSlider" parent="OuterMargin/Panel/ControlsMargin/ControlsVBox/VolumeHBox/SFXHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_e2mec")
value = 100.0

[node name="ResolutionButton" type="Button" parent="OuterMargin/Panel/ControlsMargin/ControlsVBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "FULLSCREEN"

[node name="CloseMargin" type="MarginContainer" parent="OuterMargin/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="CloseButton" type="Button" parent="OuterMargin/Panel/CloseMargin"]
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("1_e2mec")
text = "CLOSE"

[node name="MusicVolumeChangeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[node name="SFXVolumeChangeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[connection signal="value_changed" from="OuterMargin/Panel/ControlsMargin/ControlsVBox/VolumeHBox/MusicHBox/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="OuterMargin/Panel/ControlsMargin/ControlsVBox/VolumeHBox/SFXHBox/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="OuterMargin/Panel/ControlsMargin/ControlsVBox/ResolutionButton" to="." method="_on_resolution_button_pressed"]
[connection signal="timeout" from="MusicVolumeChangeTimer" to="." method="_on_music_volume_change_timer_timeout"]
[connection signal="timeout" from="SFXVolumeChangeTimer" to="." method="_on_sfx_volume_change_timer_timeout"]
